add booklist and add patch method to cors
