# book-network-ui/src/app/services/models/book-create-request.ts
@@ -2,9 +2,8 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface BookRequest {
+export interface BookCreateRequest {
   authorName: string;
-  id?: number;
   isbn: string;
   shareable?: boolean;
   synopsis: string;
